force-app/main/default/objects/Game_State_Change__e/Game_State_Change__e.object-meta.xml
<CustomObject>
    <label>Game State Change</label>
    <pluralLabel>Game State Changes</pluralLabel>
</CustomObject>