force-app/main/default/objects/Game_State_Change__e/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <label>Data</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>