force-app/main/default/objects/Game_State_Change__e/fields/GameID__c.field-meta.xml
<CustomField>
    <fullName>GameID__c</fullName>
    <label>GameID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>